--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <!-- Section 1 -->
     <section>
       <div class="media reveal">
-        <img src="https://via.placeholder.com/900x600.png?text=Your+Photo+Here+%F0%9F%8C%B8" alt="Placeholder image 1" loading="lazy">
+        <img src="images/1000008921.jpg" alt="Placeholder image 1" loading="lazy">
       </div>
       <div class="text reveal">
         <h2>Remember our first trip</h2>
@@ -121,14 +121,14 @@
         <p>Sometimes a single smile from you turns any ordinary day into something special. Thank you for being you, always.</p>
       </div>
       <div class="media reveal">
-        <img src="https://via.placeholder.com/900x600.png?text=Another+Photo+%F0%9F%8C%B8" alt="Placeholder image 2" loading="lazy">
+        <img src="images/1000008930.jpg" alt="Placeholder image 2" loading="lazy">
       </div>
     </section>
 
     <!-- Section 3 -->
     <section>
       <div class="media reveal">
-        <img src="https://via.placeholder.com/900x600.png?text=Swap+this+image+later+%F0%9F%92%96" alt="Placeholder image 3" loading="lazy">
+        <img src="images/1000009029.jpg" alt="Placeholder image 3" loading="lazy">
       </div>
       <div class="text reveal">
         <h2>For all the little things</h2>
