--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 <body>
   <header class="hero">
     <div>
-      <h1>Happy Birthday, Florence!</h1>
-      <p>To the one who fills my days with laughter and my heart with light — today is all about you ✨</p>
+      <h1>❤️ Joyeux Anniversaire Flo ❤️</h1>
+      <p>À celle qui occupe mes pensées, et qui remplit mon coeur chaque fois que mon regard la croise</p>
       <div class="underline"></div>
     </div>
 
@@ -106,46 +106,101 @@
     <!-- Section 1 -->
     <section>
       <div class="media reveal">
-        <img src="images/1000008921.jpg" alt="Placeholder image 1" loading="lazy">
+        <img src="images/1000008930.jpg" alt="Placeholder image 1" loading="lazy">
       </div>
       <div class="text reveal">
-        <h2>Remember our first trip</h2>
-        <p>That day we walked for hours, laughed at silly cafes and got lost in the charming streets — I remember thinking "this is the start of something beautiful".</p>
+        <h2>J'aime quand on est ensemble</h2>
+        <p>J'ai jamais envie de partir.</p>
       </div>
     </section>
 
     <!-- Section 2 (alt order) -->
     <section class="alt">
       <div class="text reveal">
-        <h2>Your smile</h2>
-        <p>Sometimes a single smile from you turns any ordinary day into something special. Thank you for being you, always.</p>
+        <h2>J'aime quand tu es heureuse</h2>
+        <p>Ton bonheur est mon bonheur.</p>
       </div>
       <div class="media reveal">
-        <img src="images/1000008930.jpg" alt="Placeholder image 2" loading="lazy">
+        <img src="images/1000008924.jpg" alt="Placeholder image 2" loading="lazy">
       </div>
     </section>
 
     <!-- Section 3 -->
     <section>
       <div class="media reveal">
-        <img src="images/1000009029.jpg" alt="Placeholder image 3" loading="lazy">
+        <img src="images/1000008922.jpg" alt="Placeholder image 3" loading="lazy">
       </div>
       <div class="text reveal">
-        <h2>For all the little things</h2>
-        <p>From the tiny notes to the long conversations, your thoughtfulness never goes unnoticed. Today I celebrate all of that — and you.</p>
+        <h2>J'aime ton style</h2>
+        <p>Tenue indienne, tenue de travail, et même en pyjama.</p>
       </div>
     </section>
 
-    <!-- Section 4: big centered text -->
+    <!-- Section 4 (alt order) -->
+    <section class="alt">
+      <div class="text reveal">
+        <h2>J'aime quand es malade</h2>
+        <p>Même si je vais tout faire pour que ça arrive le moins possible.</p>
+      </div>
+      <div class="media reveal">
+        <img src="images/1000008920.jpg" alt="Placeholder image 2" loading="lazy">
+      </div>
+    </section>
+
+    <!-- Section 5 -->
+    <section>
+      <div class="media reveal">
+        <img src="images/1000009029.jpg" alt="Placeholder image 3" loading="lazy">
+      </div>
+      <div class="text reveal">
+        <h2>J'aime quand tu boudes</h2>
+        <p>Mais ça me fait un petit pincement au coeur à chaque fois aussi. 😖</p>
+      </div>
+    </section>
+
+    <!-- Section 6 (alt order) -->
+    <section class="alt">
+      <div class="text reveal">
+        <h2>J'aime tes cuisses...</h2>
+        <p>No comment. 😇</p>
+      </div>
+      <div class="media reveal">
+        <img src="images/1000009057.jpg" alt="Placeholder image 2" loading="lazy">
+      </div>
+    </section>
+
+    <!-- Section 7 -->
+    <section>
+      <div class="media reveal">
+        <img src="images/1000008918.jpg" alt="Placeholder image 3" loading="lazy">
+      </div>
+      <div class="text reveal">
+        <h2>Je t'aime quand tu resplendis</h2>
+        <p>Tu m'aveugles.</p>
+      </div>
+    </section>
+
+    <!-- Section 8 (alt order) -->
+    <section class="alt">
+      <div class="text reveal">
+        <h2>J'aime quand tu te blottis contre moi</h2>
+        <p>Tu fit si parfaitement dans mes bras.</p>
+      </div>
+      <div class="media reveal">
+        <img src="images/1000008921.jpg" alt="Placeholder image 2" loading="lazy">
+      </div>
+    </section>
+
+    <!-- Section END: big centered text -->
     <section style="grid-template-columns:1fr; text-align:center">
       <div class="text reveal">
-        <h2 style="font-size:2.4rem">I love you, Florence.</h2>
-        <p>May your day be filled with as much joy and warmth as you bring into my life every day.</p>
+        <h2 style="font-size:2.4rem">Je t'aime Flo</h2>
+        <p>Ton premier cadeau: on se verra dimanche 😇 </p>
       </div>
     </section>
 
     <footer>
-      <p>Made with ❤️ — Replace the images and text however you like.</p>
+      <p>Made with ❤️ — Tu peux montrer à tes copines pour montrer que tu as le meilleur bf si tu veux </p>
     </footer>
   </main>
 
