--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       overflow:hidden;
     }
     .hero h1{
-      font-size:clamp(2.5rem, 6vw, 6rem);
-      margin:0 0 .5rem 0;
-      letter-spacing: -1px;
-      text-shadow:0 6px 30px rgba(0,0,0,0.6);
+      line-height: 1.2;
+      text-align: center;
+      hyphens: auto;
+      word-break: keep-all;
     }
     .hero p{
       font-size:clamp(1rem,2.5vw,1.5rem);
