--- a/index.html
+++ b/index.html
@@ -33,10 +33,19 @@
       overflow:hidden;
     }
     .hero h1{
+      font-size:clamp(2.5rem, 6vw, 6rem);
+      margin:0 0 .5rem 0;
+      letter-spacing: -1px;
+      text-shadow:0 6px 30px rgba(0,0,0,0.6);
       line-height: 1.2;
       text-align: center;
       hyphens: auto;
       word-break: keep-all;
+    }
+    
+    /* Desktop version */
+    .hero h1::before {
+      content: attr(data-desktop);
     }
     .hero p{
       font-size:clamp(1rem,2.5vw,1.5rem);
@@ -103,6 +112,11 @@
       .hero{
         padding:2rem 1rem;
       }
+      
+      /* Mobile version of title */
+      .hero h1::before {
+        content: attr(data-mobile);
+      }
     }
 
     /* footer */
@@ -113,7 +127,7 @@
 <body>
   <header class="hero">
     <div>
-      <h1>❤️ Joyeux Anniversaire Flo ❤️</h1>
+      <h1 data-mobile="❤️ Joyeux Anniversaire ❤️ Flo" data-desktop="❤️ Joyeux Anniversaire Flo ❤️"></h1>
       <p>À celle qui occupe mes pensées, et qui remplit mon coeur chaque fois que mon regard la croise</p>
       <div class="underline"></div>
     </div>
