Birthday better title on mobile3

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
   <header class="hero">
     <div>
-      <h1 data-mobile="❤️ Joyeux Anniversaire ❤️ Flo" data-desktop="❤️ Joyeux Anniversaire Flo ❤️"></h1>
+      <h1 data-mobile="❤️ Joyeux ❤️ ❤️ Anniversaire ❤️  ❤️ Flo ❤️" data-desktop="❤️ Joyeux Anniversaire Flo ❤️"></h1>
       <p>À celle qui occupe mes pensées, et qui remplit mon coeur chaque fois que mon regard la croise</p>
       <div class="underline"></div>
     </div>
