Birthday better title on mobile5

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     /* Desktop version */
     .hero h1::before {
       content: attr(data-desktop);
+      white-space: pre-line;
     }
     .hero p{
       font-size:clamp(1rem,2.5vw,1.5rem);
@@ -127,7 +128,7 @@
 <body>
   <header class="hero">
     <div>
-      <h1 data-mobile="❤️❤️❤️❤️❤️<br>Joyeux<br>Anniversaire<br>Flo<br>❤️❤️❤️❤️❤️" data-desktop="❤️ Joyeux Anniversaire Flo ❤️"></h1>
+      <h1 data-mobile="❤️ ❤️ ❤️ ❤️ ❤️\A Joyeux\A Anniversaire\A Flo\A ❤️ ❤️ ❤️ ❤️ ❤️" data-desktop="❤️ Joyeux Anniversaire Flo ❤️"></h1>
       <p>À celle qui occupe mes pensées, et qui remplit mon coeur chaque fois que mon regard la croise</p>
       <div class="underline"></div>
     </div>
